2017-06-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvidvi.c: Add support for pTeX tate-kumi DVI.
	* dvidvi.test: Add tests for pTeX support.
	* playout.3, playtate.dvi: Added.
	* Makefile.am: Adjusted for pTeX support.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: Drop <kpathsea/config.h> (isascii via KPSE_COMMON).

2015-04-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: #include <kpathsea/config.h> (for isascii).

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: First include <config.h>.

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-05-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c: Drop the problematic prototype for isatty(),
	already declared in <unistd.h> or <kpathsea/c-fopen.h>.
	Cast arguments to avoid MSVC compiler warnings.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2011-09-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.test: New shell script for tests.
	* tests/{play.dvi,playout.2}: Test input and expected output.
	* Makefile.am: Add the test and its data.

2011-09-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c (writedvifile): Write newline at end of stdout.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c (writepreamble): Cast string literal to 'unsigned
	const char *' to avoid 'differ in signedness' warning.

2011-02-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (EXTRA_DIST): read.me has been renamed README.

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvidvi.c (SET_BINARY): Remove casts to void.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): Remove '-DNO_DEBUG' ...