@@ -6,6 +6,10 @@
 AM_CPPFLAGS = $(KPATHSEA_INCLUDES) -DKPATHSEA -DASCIIPTEX -DUNIX
 AM_CFLAGS = $(WARNING_CFLAGS)
 
+if WIN32
+LDADD = $(KPATHSEA_LIBS)
+endif WIN32
+
 bin_PROGRAMS = dvidvi
 
 dvidvi_SOURCES = dvidvi.c
